--- a/package.json
+++ b/package.json
@@ -25,12 +25,21 @@
                 "language": "typescript",
                 "path": "./snippets/snippets.json"
             }
+        ],
+        "commands":[
+            {
+                "command": "azure-node.template-deploy",
+                "title": "Generate code for template deployment",
+                "category": "azure-node"
+            }
         ]
     },
     "scripts": {
     },
     "dependencies": {
-        "npm": "*"
+        "npm": "*",
+        "escodegen": "^1.8.1",
+        "esprima": "^3.1.3"
     },
     "devDependencies": {
         "typescript": "^2.0.3",
